cmake_minimum_required(VERSION 3.5.0)
project(rpn VERSION 0.1.0 LANGUAGES C CXX)

add_executable(rpn rpn.cpp)

add_executable(wcnt wcnt.cpp)

add_executable(sentlength sentlength.cpp)

add_executable(todolist todolist.cpp)

add_executable(range range.cpp)

add_executable(iter iter.cpp)

add_executable(iter2 iter2.cpp)

add_executable(algo4 algo4.cc)

add_executable(algo5 algo5.cc)

add_executable(adapt1 adapt1.cc)